# funkECS

./: .gitignore  README.md  package-lock.json  package.json  spec  tsconfig.json
src/interpreter/: Interpreter.ts  Models.ts  Scope.ts  SystemExecution.ts  Systems.ts  World.ts  util.ts
src/public/: App.tsx  decl.d.ts  index.html  index.tsx
tree-sitter-funcECS/: Cargo.toml  binding.gyp  grammar.js  package.json  tree-sitter-funkECS.wasm
tree-sitter-funcECS/bindings/node/: binding.cc  index.js
tree-sitter-funcECS/bindings/rust/: lib.rs
tree-sitter-funcECS/src/: grammar.json  node-types.json  parser.c
tree-sitter-funcECS/test/corpus/: component.txt  pipeline.txt  system.txt  temp.txt
